# gtg

./: README.md  meson.build  requirements.plugins.txt  requirements.txt
GTG/: gtg.in
GTG/core/: datastore.py  datastore2.py  logger.py  meson.build  saved_searches.py  searchquery.py  task.py  treefactory.py
GTG/core/dbus/: dbus.py  tasks.py
GTG/core/plugins/: engine.py
GTG/gtk/: application.py  buffered_viewtree.py  errorhandler.py  meson.build  tree_util.py
GTG/gtk/browser/: main_window.py  sidebar_tree.py  treeview_factory.py
GTG/plugins/: meson.build
GTG/plugins/export/: export.py  export.ui  task_str.py
GTG/plugins/export/export_templates/: template_sexy.html
GTG/plugins/untouched_tasks/: untouchedTasks.py
data/dbus/: org.gnome.GTG.Tasks.xml
docs/: gtg.1
po/: POTFILES.in  POTFILES.skip  de.po
scripts/: debug.sh
